--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,12 +10,10 @@
     <div class="container">
      
         <div class="jumbotron" style="height:200px;width:1120px;font-family: 'Kaushan Script', cursive;font-size:5px">
-          <p>In life, you only have 60 seconds to impress someone. 1 minute can make or break you.<br>
-          one minute can kill you or heal you. let's use our one minute to tell something to the world.<br>
-        Here we have a pitch app where you will be posting a pitch for only one minute.please post something constructive.</p>
+          <p>Posted Events</p>
         </div>
       </div>
-      <h3 style="color: black;text-align: center"> Here are Pitches Categories, you can choose one you might like!</h3>
+      <h3 style="color: black;text-align: center"> here are different event categories you may see</h3>
       <br>
       <div style="width:600px;height:100px;margin-left:400px">
       <ul class="nav justify-content-center" role="tablist">
