--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -13,8 +13,8 @@
 <div class="row">
                 <div class="card">
                                 <div class="card-body text-center">
-                                <h4><a>{{pitch.title}}</a></h4>
-                                  <h5 class="card-text text-center">{{pitch.description}}.</h5>
+                                <h4><a>{{event.title}}</a></h4>
+                                  <h5 class="card-text text-center">{{event.description}}.</h5>
                                 </div>
                 </div>
 
