--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -12,9 +12,9 @@
 					<footer class="blockquote-footer"> Posted by {{category.user.username}}</footer>
 				</blockquote>
 				
-				<a href="{{url_for('main.new_comment',pitch_id = category.id)}}" class="btn btn-info"> Add a comment</a>
-				<a href="{{url_for('main.upvote',pitch_id = category.id)}}" class= "btn btn-info"><i></i>Upvote <span>{{category.upvotes.count()}}</span></a>
-				<a href="{{url_for('main.downvote',pitch_id = category.id)}}" class= "btn btn-info"><i class="far fa-thumbs-up"></i>Downvote <span>{{category.downvotes.count()}}</span></a>
+				<a href="{{url_for('main.new_comment',event_id = category.id)}}" class="btn btn-info"> Add a comment</a>
+				<a href="{{url_for('main.like',event_id = category.id)}}" class= "btn btn-info"><i></i>Like <span>{{category.likes.count()}}</span></a>
+
 				
 			</div>
 		</div>
