--- a/app/templates/auth/donation.html
+++ b/app/templates/auth/donation.html
@@ -2,11 +2,10 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 {% block content %}
 <div class="row">
-   
       <div class="col-md-6" style="margin-left: 300px; margin-top:70px; ">
             <div class="jumbotron"  style="width:100%;">
-   {{wtf.quick_form(subscription_form)}}
+   {{wtf.quick_form(donation_form)}}
 </div>
-</div> 
+</div>
 </div>
 {% endblock%}
