--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,9 +11,11 @@
             <div class="col-md-2">
                 <ul>
                     <a style=" color:rgb(255, 255, 255); font-family: 'Frank Ruhl Libre', serif; font-size:22px; "
-                            href="{{url_for('auth.subscription')}}"> Donate </a>
+                            href="{{url_for('auth.donation')}}"> Donate </a>
                 </ul>
             </div>
+
+
             <!-- <div class="col-md-2">
                 <ul>
                     <li><a style=" color:rgb(255, 255, 255); font-family:'Great Vibes',cursive; font-size:32px; margin-right: 5px;"
@@ -26,6 +28,9 @@
                             href="{{url_for('main.home')}}">Events </a>
                 </ul>
             </div>
+
+
+
             <!-- <div class="col-md-2"> -->
 
                 <ul class="navbar-right">
