--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -55,6 +55,12 @@
 </div>
 
 <div style="margin-top:100px; font-family: 'Frank Ruhl Libre', serif;  background-color:#170a19;text-align:center;color:white;height:100px;font-size:18px;padding-top:40px;">
+    <div class="col-md-2">
+        <ul>
+            <a style=" color:rgb(255, 255, 255); font-family: 'Frank Ruhl Libre', serif; font-size:22px; "
+                    href="{{url_for('auth.subscription')}}"> Subscribe </a>
+        </ul>
+    </div>
   <p> &copy;2019 copyright | Donations |All Right Reserved </p>
 </div>
 
