--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,28 +1,26 @@
 {% macro display(category_list) %}
-<div class="row">
+<!-- <div class="row">
 	{% if category_list %}
-	{% for category in category_list %}
+	{% for events in category_list %}
 	<div class="col-md-6">
 		<div class="thumbnail text-center">
-			<h5 class="card-header">{{category.title}}</h5>
-			<h5 class="card-header">{{category.category}}</h5>
+			<h5 class="card-header">{{events.title}}</h5>
+			<h5 class="card-header">{{events.category}}</h5> -->
 			<div class="card-body">
 				<blockquote class="blockquote mb-0">
-					<h2>{{category.description}}</h2>
-					<footer class="blockquote-footer"> Posted by {{category.user.username}}</footer>
+					<h2>{{events.description}}</h2>
+					<footer class="blockquote-footer"> Posted by {{events.user.username}}</footer>
 				</blockquote>
 
-				<a href="{{url_for('main.new_comment',event_id = category.id)}}" class="btn btn-info"> Add a comment</a>
-				<a href="{{url_for('main.upvote',event_id = category.id)}}" class="btn btn-info"><i></i>Upvote <span>{{category.upvotes.count()}}</span></a>
-				
+				<a href="{{url_for('main.new_comment',event_id = events.id)}}" class="btn btn-info"> Read_More</a>
+				<a href="{{url_for('main.upvote',event_id = events.id)}}" class="btn btn-info"><i></i>Upvote <span>{{events.upvotes.count()}}</span></a>
+				  
 			</div>
-		</div>
-
-	</div>
+		
 	{% endfor %}
 	{% else %}
 	{% endif %}
-</div>
+
 {% endmacro %}
 
 
