--- a/app/templates/donation.html
+++ b/app/templates/donation.html
@@ -22,7 +22,7 @@
 					<div>
 						<p>{{donation.id}}</p>
 					</div>
-					<h4 style="font-family: 'Great Vibes', cursive;">{{ donation.description }}</h4>
+					<h4 style="font-family:'Courier New', Courier, monospace;">{{ donation.description }}</h4>
 					<h6> Posted by {{user.username}}.</h6>
 
 				</div>
