--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -23,7 +23,7 @@
                             <div>
                                 <p>{{event.id}}</p>
                             </div>
-                            <h4 style="font-family: 'Great Vibes', cursive;">{{ event.description }}</h4>
+                            <h4 style="font-family:'Courier New', Courier, monospace;">{{ event.description }}</h4>
                             <h6> Posted by {{user.username}}.</h6>
                             <a href="{{url_for('main.new_comment', event_id = events.id)}}" class="btn btn-info">Comment <span>{{events.comments.count()}}</span></a>
                     </div>
